apply plugin: 'idea'
apply plugin: 'java'
apply plugin: 'application'

version = '1.0'
sourceCompatibility = 1.9
targetCompatibility = 1.9

mainClassName = "net.s5games.mafia.AreaEditor"

repositories {
    mavenLocal()
    mavenCentral()
}

dependencies {
    // https://mvnrepository.com/artifact/com.miglayout/miglayout-swing
    compile group: 'com.miglayout', name: 'miglayout-swing', version: '5.0'
    // https://mvnrepository.com/artifact/javax.json/javax.json-api
    compile group: 'javax.json', name: 'javax.json-api', version: '1.1.2'

}

ext.moduleName = 'net.s5games.mafia'

compileJava {
    inputs.property("moduleName", moduleName)
    doFirst {
        options.compilerArgs = [
                '--module-path', classpath.asPath,
        ]
        classpath = files()
    }
}

jar {
    inputs.property("moduleName", moduleName)
    manifest {
        attributes('Automatic-Module-Name': moduleName)
    }
}

def java_home = System.getenv('JAVA_HOME')
task link(type: Exec) {
    dependsOn 'clean'
    dependsOn 'jar'

    workingDir 'build'

    commandLine "${java_home}/bin/jlink", '--module-path', "libs${File.pathSeparatorChar}${java_home}/jmods",
            '--add-modules', 'net.s5games.mafia', '--launcher', 'cli=cli/cli.Main', '--output', 'dist', '--strip-debug',
            '--compress', '2', '--no-header-files', '--no-man-pages'
}